# mypycp2k

./: .gitignore  README.md  main.py  main_screen_cutoff.py  methane.xyz  mypycp2k.yaml  pyproject.toml  run_intnano.sh
Real_simulations/: run_intnano.sh
basis/: DEF2_ALL  README.md
check_convergence/: check_convergence.py
conda-recipe/: meta.yaml
cp2k_run/: cp2k_run.py
data/db/: DB_100-41-4.yaml  DB_106-97-8.yaml  (+79 more)
db/: db.py
examples/: 234.py  2345.py  234_RI.py  234_RI_PBE.py  234_RI_PBE_def2.py  234_RI_PBE_exp.py  234_RI_PBE_yaml.py  234_RI_PBE_yaml_factory.py  234_test.py  234_ver_2.py  234_ver_3.py  B3LYP_ordinary.py  BASIS_CC_AUG_RI_NEW  H2O.xyz  artem_gw_project.inp  example.yaml  example_factory.yaml  example_tight.yaml  example_tight_1.yaml  example_ver_3.yaml  extract_gw_energies.py  extract_homo_lumo.py  extract_homo_lumo_and_gw_energies.py  main.py  main_plot_homo_lumo.py  main_screen_cutoff.py
extract_functions/: basis_set_extrapolation.py  basis_set_extrapolation_new.py  extract_from_output.py  extract_from_output_v9.py
mypycp2k/: __init__.py  cp2k_input.py  dft.py  extract_from_output.py  force_eval.py  outer_scf.py  scf.py  subsys.py  xc.py
stand_alone_scripts/: add_to_db_from_sim_folder.py  filter_molecules.py  postproc_qm9.py  test_fun.py
tests/: README
tmp/: extract_basis_set_interpolation.py  return_exception_mols_par.py  return_exception_mols_serial.py  return_large_sig_c_mols.py  test.py  test_print.py
util/: exceptions.py  general_util.py  generate_csv_files_for_qm9.py  return_scf_problems_mols.sh  units_conversion.py  xyz.py
(+262 files in other folders)
