[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypycp2k"
authors = [{name = "Artem Fediai", email = "artem.fedyai@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"]

[project.urls]
Home = "https://not.set.yet"
